# fastapi-tx-classifier

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ML_PHASES.md  Makefile  PERFORMANCE_ANALYSIS_REPORT.md  README.md  classification_config.json  classification_logic.py  config.py  dev-requirements.txt  docker-compose.yml  folder_structure.txt  main.py  model_registry.py  models.py  mypy.ini  pyproject.toml  redis_client.py  requirements.txt  rule_based_test_results.csv  run_all_tests.py  run_performance_test.py  test_ci_formatting.md  test_mypy_fixes.py  test_rule_based_performance.py
.devcontainer/: devcontainer.json
.github/workflows/: ci-fixed.yml  ci.yml  test.yml
data/: .gitkeep.dvc
examples/: README.md  basic_usage.py  batch_operations.py  curl_examples.sh  postman_collection.json  python_client.py
fastapi_tx_classifier/: __init__.py  classification_logic.py  config.py  exceptions.py  main.py  model_registry.py  models.py  mypy.ini  redis_client.py
fastapi_tx_classifier/routers/: classification.py  messages.py  system.py  transactions.py
fastapi_tx_classifier/tests/: test_transactions.py
routers/: classification.py  messages.py  system.py  transactions.py
scripts/: api_tester.py
tests/: conftest.py  run_all_tests.py  run_performance_test.py  test_api_endpoints.py  test_main.py  test_rule_based_performance.py  test_transactions.py
